@@ -7,6 +7,7 @@
   * Added age keyword to -R expressions. (Ex: -R "age 5days12h <" to choose articles less than 5 and a half days old.)
   * Error on non-option command line args rather than ignoring them.  To place comments in listfiles, use # as the first char on a line, or with preceeding whitespace and not inside quotes.
   * Optimize cache/midinfo parsing a bit.
+  * Extend server penalization so that any server that disconnects before successfully executing at least one command will be penalized.  This means that disconnects due to overquota, servers that connect but timeout before saying hello, etc, will also be penalized now.
 
 2002-06-17 v0.19.1:
   * Print error message rather than segv on flush without specifying a group first. (Reported by Christian Marillat)
